--- a/static_version/index.html
+++ b/static_version/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Wine Biblio - static</title>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Wine biblio">
     <meta name="theme-color" content="#712cf9">
