--- a/static_version/index.html
+++ b/static_version/index.html
@@ -23,6 +23,10 @@
 
 
     <style>
+        #app-page {
+            overflow: hidden;
+        }
+
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -94,7 +98,7 @@
     </button>
 </header>
 
-<div class="container-fluid">
+<div class="container-fluid" id="app-page">
     <div class="row">
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 pt-5 d-md-block bg-light sidebar collapse">
             <div class="position-sticky sidebar-sticky">
